--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="row">
                 <div class="col-xs-6">
-                    <ul ui-on-Drop="onDrop($event,$data,listOfDirectivesDropped)">
+                    <ul>
                         <li ui-draggable="true" drag="directive" 
                         on-drop-success="dropSuccessHandler($event,$index,listOfDirectives)"
                         ng-repeat="directive in listOfDirectives track by $index">
@@ -72,13 +72,13 @@
 
             <div class="row">
                     <div class="col-xs-12">
-                    <div gridster>
+                    <div gridster="gridsterOpts">
                             <ul>
                                 <li ui-on-Drop="onDrop($event,$data,item)"  
                                     gridster-item row="item.position[0]" col="item.position[1]" size-x="item.size.x" size-y="item.size.y"
                                          ng-repeat="item in standardItems" id="container{{$index}}">                                                                                 
-                                         <div ng-repeat="itemDroped in item.dropperItems">
-                                                <div style="float: right;font-size: 10px;" ng-show="item.dropperItems.length > 0">
+                                         <div ng-repeat="itemDroped in item.droppedItems">
+                                                <div style="float: right;font-size: 10px;" ng-show="item.droppedItems.length > 0">
                                                         <a href="#" ng-click="openForm(itemDroped)" >Edit</a>
                                                 </div>                                                                                              
                                                     <div class="form" style="  z-index: 9999;
